# docs/swagger.yaml
@@ -21,6 +21,12 @@ definitions:
     properties:
       amount:
         type: string
+      cvc:
+        type: string
+      expDate:
+        type: string
+      hpan:
+        type: string
       order_id:
         type: integer
       user_id:
@@ -554,7 +560,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Status
+      - description: Payment status
         in: query
         name: status
         required: true
