# internal/provider/epay/types.go
@@ -3,11 +3,15 @@ package epay
 import "net/http"
 
 type CreateInvoiceRequest struct {
-	ShopID     string `json:"shop_id"`
-	TerminalID string `json:"terminal_id"`
-	OrderID    string `json:"order_id"`
-	Amount     string `json:"amount"`
-	Currency   string `json:"currency"`
+	Amount      int64  `json:"amount"`
+	Currency    string `json:"currency"`
+	Name        string `json:"name"`
+	Cryptogram  string `json:"cryptogram"`
+	InvoiceID   string `json:"invoiceId"`
+	Description string `json:"description"`
+	Email       string `json:"email"`
+	CardSave    bool   `json:"cardSave"`
+	PostLink    string `json:"postLink"`
 }
 
 type CreateInvoiceResponse struct {
@@ -17,7 +21,7 @@ type CreateInvoiceResponse struct {
 
 type TokenResponse struct {
 	Scope        string `json:"scope"`
-	ExpiresIn    string `json:"expires_in"` // Changed to string
+	ExpiresIn    string `json:"expires_in"`
 	TokenType    string `json:"token_type"`
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
@@ -30,18 +34,25 @@ type TokenRequest struct {
 	Scope        string `json:"scope"`
 }
 
+type Cryptogram struct {
+	HPAN       string `json:"hpan"`
+	ExpDate    string `json:"expDate"`
+	CVC        string `json:"cvc"`
+	TerminalID string `json:"terminalId"`
+}
+
 type Credentials struct {
 	URL            string
 	Login          string
 	Password       string
 	OAuthURL       string
 	PaymentPageURL string
-	ShopID          string
-	TerminalID      string
+	ShopID         string
+	TerminalID     string
 	GlobalToken    TokenResponse
 }
 
 type Client struct {
 	httpClient  *http.Client
-	credentials Credentials
+	Credentials Credentials
 }
